[metadata]
name = ksvd
version = 0.0.1
author = Guy Shapira

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    matplotlib
    scikit-learn
    tqdm
    pillow
    einops
    omegaconf
    hydra-core
    tabulate

[options.extras_require]
dev =
    pytest
    pandas

[options.packages.find]
exclude =
    tests*

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
